--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,13 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
         <jaxb.version>2.3.0</jaxb.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
         <org.projectlombok.version>1.18.6</org.projectlombok.version>
-        <argLine>--illegal-access=permit</argLine>
+<!--        <argLine>&#45;&#45;illegal-access=permit</argLine> for java 11-->
     </properties>
 
     <dependencies>
