--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <org.mapstruct.version>1.4.1.Final</org.mapstruct.version>
         <org.projectlombok.version>1.18.16</org.projectlombok.version>
 <!--        <argLine>&#45;&#45;illegal-access=permit</argLine> for java 11-->
+        <hamcrest-core.version>2.2</hamcrest-core.version>
+        <hamcrest-all.version>1.3</hamcrest-all.version>
     </properties>
 
     <dependencies>
@@ -99,6 +101,16 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${hamcrest-all.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
